# Forma

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CompilerFlags.cmake  README.md
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/Application/: Application.qrc  CMakeLists.txt  MainWindow.cpp  main.cpp
src/Application/Startup/: MainObject.cpp  MainObject.h  SplashScreen.cpp  SplashScreen.h
src/ElaWidgetTools/: ElaWindow.cpp
src/ElaWidgetTools/include/: ElaWindow.h
src/Utils/: CMakeLists.txt
src/Utils/include/: Utils_global.h
src/Utils/include/Common/: EventBus.h
src/Utils/include/Logger/: Logger.h
src/Utils/src/: Logger.cpp
src/utils/: math.hpp  rendering.hpp
